TrackedMapTest has been fixed.